@@ -3,7 +3,6 @@ package nl.vng.diwi.resources;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -707,8 +706,8 @@ public class ProjectsResource {
         //save file to disk
         String fileSuffix = LocalDateTime.now().format(formatter);
         String filename = "excel_import_" + fileSuffix + ".xlsx";
-        String filePath = projectConfig.getDataDir() + filename;
-        java.nio.file.Path path = Paths.get(filePath);
+        java.nio.file.Path path = java.nio.file.Path.of(projectConfig.getDataDir(), filename);
+        var filePath = path.toString();
         try {
             Files.copy(inputStream, path, StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException e) {
